--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
     <header class="header">
         <div class="header__left">
             <a href="index.html" class="header_logo"><img src="img/logo.svg" alt="logo"></a>
-            <a href="#" class="header_search"><img src="img/icon_header_search.svg" alt="search"></a>
+            <a href="#" class="header_search"><svg width="27" height="28" viewBox="0 0 27 28" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M19.0586 17.6249C20.6703 15.8648 21.6272 13.6038 21.7688 11.2215C21.9103 8.8392 21.2279 6.48075 19.836 4.5422C18.4441 2.60365 16.4275 1.20306 14.125 0.575643C11.8224 -0.0517774 9.37412 0.132183 7.19119 1.09663C5.00826 2.06108 3.22365 3.74727 2.13706 5.87205C1.05047 7.99682 0.728077 10.4308 1.22402 12.7652C1.71996 15.0996 3.00403 17.1922 4.8606 18.6917C6.71717 20.1912 9.03316 21.0063 11.4196 20.9999C13.672 21.003 15.8635 20.269 17.6597 18.9099L25.4076 26.7169C25.4931 26.806 25.5956 26.8771 25.7089 26.926C25.8222 26.975 25.9442 27.0008 26.0676 27.0019C26.1913 27.0023 26.3138 26.9772 26.4273 26.9282C26.5409 26.8792 26.6431 26.8072 26.7276 26.7169C26.9016 26.536 26.9987 26.2949 26.9987 26.0439C26.9987 25.793 26.9016 25.5518 26.7276 25.3709L19.0586 17.6249ZM2.88565 10.4999C2.89848 8.81465 3.40996 7.17089 4.35561 5.77587C5.30126 4.38086 6.63875 3.29703 8.19946 2.66102C9.76017 2.02501 11.4742 1.86529 13.1256 2.202C14.7769 2.53871 16.2917 3.35678 17.4788 4.55307C18.6659 5.74935 19.4722 7.27031 19.7962 8.92421C20.1202 10.5781 19.9473 12.2909 19.2993 13.8467C18.6512 15.4024 17.5571 16.7315 16.1549 17.6664C14.7526 18.6013 13.105 19.1001 11.4196 19.0999C9.14819 19.0891 6.97384 18.1774 5.37386 16.5651C3.77388 14.9527 2.879 12.7714 2.88565 10.4999Z"
+                        fill="#E8E8E8" />
+                </svg>
+            </a>
         </div>
         <div class="header__right">
             <a href="#" class="header_menu"><img src="img/header_nav_1.svg" alt="menu"></a>
@@ -78,9 +84,9 @@
 
         <div class="catalog">
             <div class="product">
-                <a href="#" class="product_link"><img src="img/product1.svg" alt="" class="product_img"></a>
+                <a href="product.html" class="product_link"><img src="img/product1.svg" alt="" class="product_img"></a>
                 <div class="product_info">
-                    <a href="#" class="product_name">ELLERY X M'O CAPSULE</a>
+                    <a href="product.html" class="product_name">ELLERY X M'O CAPSULE</a>
                     <p class="product_text">Known for her sculptural takes on traditional tailoring, Australian
                         arbiter
                         of
@@ -92,9 +98,10 @@
                 </a>
             </div>
             <div class="product">
-                <a href="#" class="product_link"><img src="img/product2.svg" alt="product" class="product_img"></a>
+                <a href="product.html" class="product_link"><img src="img/product2.svg" alt="product"
+                        class="product_img"></a>
                 <div class="product_info">
-                    <a href="#" class="product_name">ELLERY X M'O CAPSULE</a>
+                    <a href="product.html" class="product_name">ELLERY X M'O CAPSULE</a>
                     <p class="product_text">Known for her sculptural takes on traditional tailoring, Australian
                         arbiter
                         of
@@ -106,9 +113,10 @@
                 </a>
             </div>
             <div class="product">
-                <a href="#" class="product_link"><img src="img/product3.svg" alt="product" class="product_img"></a>
+                <a href="product.html" class="product_link"><img src="img/product3.svg" alt="product"
+                        class="product_img"></a>
                 <div class="product_info">
-                    <a href="#" class="product_name">ELLERY X M'O CAPSULE</a>
+                    <a href="product.html" class="product_name">ELLERY X M'O CAPSULE</a>
                     <p class="product_text">Known for her sculptural takes on traditional tailoring, Australian
                         arbiter
                         of
@@ -120,9 +128,10 @@
                 </a>
             </div>
             <div class="product">
-                <a href="#" class="product_link"><img src="img/product4.svg" alt="product" class="product_img"></a>
+                <a href="product.html" class="product_link"><img src="img/product4.svg" alt="product"
+                        class="product_img"></a>
                 <div class="product_info">
-                    <a href="#" class="product_name">ELLERY X M'O CAPSULE</a>
+                    <a href="product.html" class="product_name">ELLERY X M'O CAPSULE</a>
                     <p class="product_text">Known for her sculptural takes on traditional tailoring, Australian
                         arbiter
                         of
@@ -134,9 +143,10 @@
                 </a>
             </div>
             <div class="product">
-                <a href="#" class="product_link"><img src="img/product5.svg" alt="product" class="product_img"></a>
+                <a href="product.html" class="product_link"><img src="img/product5.svg" alt="product"
+                        class="product_img"></a>
                 <div class="product_info">
-                    <a href="#" class="product_name">ELLERY X M'O CAPSULE</a>
+                    <a href="product.html" class="product_name">ELLERY X M'O CAPSULE</a>
                     <p class="product_text">Known for her sculptural takes on traditional tailoring, Australian
                         arbiter
                         of
@@ -148,9 +158,10 @@
                 </a>
             </div>
             <div class="product">
-                <a href="#" class="product_link"><img src="img/product6.svg" alt="product" class="product_img"></a>
+                <a href="product.html" class="product_link"><img src="img/product6.svg" alt="product"
+                        class="product_img"></a>
                 <div class="product_info">
-                    <a href="#" class="product_name">ELLERY X M'O CAPSULE</a>
+                    <a href="product.html" class="product_name">ELLERY X M'O CAPSULE</a>
                     <p class="product_text">Known for her sculptural takes on traditional tailoring, Australian
                         arbiter
                         of
