--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         </div>
 
         <div class="btn_link">
-            <a href="#" class="btn">Browse All Product</a>
+            <a href="product.html" class="btn">Browse All Product</a>
         </div>
     </section>
 
