--- a/product.html
+++ b/product.html
@@ -33,31 +33,32 @@
     <section class="top-head center">
         <h2 class="top-head__heading">NEW ARRIVALS</h2>
         <nav class="breadcrumbs">
-            <a href="index.html" class="breadcrumbs__link">HOME</a>
-            <a href="#" class="breadcrumbs__link">MEN</a>
-            <a href="#" class="breadcrumbs__link breadcrumbs__link_site">NEW ARRIVALS</a>
+            <ul class="breadcrumbs_ul">
+                <li class="breadcrumbs_li"><a href="index.html" class="breadcrumbs__link">HOME</a></li>
+                <li class="breadcrumbs_li"><a href="#" class="breadcrumbs__link">MEN</a></li>
+                <li class="breadcrumbs__link breadcrumbs__link_site">NEW ARRIVALS</a></li>
+            </ul>
         </nav>
     </section>
 
     <section class="product-main">
         <div class="product-main__nav">
-            <a href="#">
-                <svg width="47" height="47" viewBox="0 0 47 47" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M47 0H0V47H47V0Z" fill="#2A2A2A" fill-opacity="0.15" />
+            <a href="product.html">
+                <svg width="31" height="31" viewBox="0 0 31 31" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path
-                        d="M29.6998 15.7499L21.9498 23.4999L29.6998 31.2499L28.1498 34.3499L17.2998 23.4999L28.1498 12.6499L29.6998 15.7499Z"
+                        d="M21.6998 7.7499L13.9498 15.4999L21.6998 23.2499L20.1498 26.3499L9.2998 15.4999L20.1498 4.6499L21.6998 7.7499Z"
                         fill="black" />
                 </svg>
+
             </a>
         </div>
         <img src="img/img-product/product-img.jpg" alt="foto product">
         <div class="product-main__nav">
             <a href="product.html">
-                <svg width="47" height="47" viewBox="0 0 47 47" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M47 0H0V47H47V0Z" fill="#D8D8D8" />
+                <svg width="31" height="31" viewBox="0 0 31 31" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path
-                        d="M17.3 31.2499L25.05 23.4999L17.3 15.7499L18.85 12.6499L29.7 23.4999L18.85 34.3499L17.3 31.2499Z"
-                        fill="#F16D7F" />
+                        d="M9.2998 23.2499L17.0498 15.4999L9.2998 7.7499L10.8498 4.6499L21.6998 15.4999L10.8498 26.3499L9.2998 23.2499Z"
+                        fill="black" />
                 </svg>
             </a>
         </div>
@@ -65,19 +66,21 @@
 
     <section class="product-detail-sku center">
         <article class="product-detail-sku__product-info">
-            <h3 class="product-detail-sku__product-info_category">WOMEN COLLECTION</h3>
-            <h2 class="product-detail-sku__product-info_title">MOSCHINO CHEAP AND CHIC</h2>
-            <p class="product-detail-sku__product-info_text">Compellingly actualize fully researched processes before
+            <h3 class="product-detail-sku__category">WOMEN COLLECTION</h3>
+            <h2 class="product-detail-sku__title">MOSCHINO CHEAP AND CHIC</h2>
+            <p class="product-detail-sku__text">Compellingly actualize fully researched processes before
                 proactive
                 outsourcing. Progressively syndicate
                 collaborative architectures before cutting-edge services. Completely visualize parallel core
                 competencies rather than exceptional portals. </p>
-            <p class="product-detail-sku__product-info_price">$561</p>
+            <p class="product-detail-sku__price">$561</p>
         </article>
 
+        <div class="product-detail-sku_line"></div>
+
         <div class="product-detail-sku__parameter">
-            <details class="product-detail-sku__parameter_list">
-                <summary class="product-detail-sku__parameter_list_menu">
+            <details class="product-detail-sku__list">
+                <summary class="product-detail-sku__list_menu">
                     <p>CHOOSE COLOR</p>
                     <svg width="11" height="6" viewBox="0 0 11 6" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
@@ -86,8 +89,8 @@
                     </svg>
                 </summary>
             </details>
-            <details class="product-detail-sku__parameter_list">
-                <summary class="product-detail-sku__parameter_list_menu">
+            <details class="product-detail-sku___list">
+                <summary class="product-detail-sku__list_menu">
                     <p>CHOOSE SIZE</p>
                     <svg width="11" height="6" viewBox="0 0 11 6" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
@@ -96,13 +99,13 @@
                     </svg>
                 </summary>
                 <form>
-                    <input type="checkbox" name="answer1" value="XS">XS <br>
-                    <input type="checkbox" name="answer2" value="S">S <br>
-                    <input type="checkbox" name="answer3" value="M">M <br>
+                    <input type="checkbox" name="answer1" value="XS"> XS<br>
+                    <input type="checkbox" name="answer2" value="S"> S<br>
+                    <input type="checkbox" name="answer3" value="M"> M<br>
                 </form>
             </details>
-            <details class="product-detail-sku__parameter_list">
-                <summary class="product-detail-sku__parameter_list_menu">
+            <details class="product-detail-sku___list">
+                <summary class="product-detail-sku__list_menu">
                     <p>QUANTITY</p>
                     <svg width="11" height="6" viewBox="0 0 11 6" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
