--- a/cart.html
+++ b/cart.html
@@ -8,7 +8,7 @@
         rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main</title>
+    <title>Product</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -69,178 +69,60 @@
                 </div>
             </details>
             <a href="#" class="header_menu no_icon"><img src="img/header_nav_2.svg" alt="user"></a>
-            <a href="cart.html" class="header_menu no_icon"><img src="img/header_nav_3.svg" alt="basket"></a>
+            <a href="#" class="header_menu no_icon"><img src="img/header_nav_3.svg" alt="basket"></a>
         </div>
     </header>
 
-    <main class="main">
-        <div class="main_left">
-            <img src="img/main_img.svg" alt="maim img">
-        </div>
-        <div class="main__right">
-            <div class="vertical-stripe"></div>
-            <div class="main__content">
-                <h1 class="main_content_title bold">THE BRAND</h1>
-                <h2 class="main_content_title">OF LUXERIOUS <span class="main_content_title pink">FASHION</span></h2>
-            </div>
-        </div>
-    </main>
-
-    <section class="category center">
-        <div class="category_item">
-            <a href="#"><img src="img/categori1.svg" alt=""></a>
-            <div class="category_info">
-                <p class="category_text">30% OFF</p>
-                <h3 class="category_subtitle">FOR WOMEN</h3>
-            </div>
-        </div>
-        <div class="category_item">
-            <a href="#"><img src="img/categori2.svg" alt="FOR MEN"></a>
-            <div class="category_info">
-                <p class="category_text">HOT DEAL</p>
-                <h3 class="category_subtitle">FOR MEN</h3>
-            </div>
-        </div>
-        <div class="category_item">
-            <a href="#"><img src="img/categori3.svg" alt="FOR KIDS"></a>
-            <div class="category_info">
-                <p class="category_text">NEW ARRIVALS</p>
-                <h3 class="category_subtitle">FOR KIDS</h3>
-            </div>
-        </div>
-        <div class="category_item wide_item">
-            <a href=""><img src="img/categori4.svg" alt="ACCESORIES"></a>
-            <div class="category_info">
-                <p class="category_text">LUXIROUS & TRENDY</p>
-                <h3 class="category_subtitle"> ACCESORIES</h3>
-            </div>
-        </div>
-
+    <section class="top-head center">
+        <h2 class="top-head__heading">SHOPPING CART</h2>
     </section>
 
-    <section class="featured_items center">
-
-        <div class="featured_items_info">
-            <h1 class="info_title">Fetured Items</h1>
-            <p class="info_text">Shop for items based on what we featured in this week</p>
-        </div>
-
-        <div class="catalog">
-            <div class="product">
-                <a href="product.html" class="product_link"><img src="img/product1.svg" alt="" class="product_img"></a>
-                <div class="product_info">
-                    <a href="product.html" class="product_name">ELLERY X M'O CAPSULE</a>
-                    <p class="product_text">Known for her sculptural takes on traditional tailoring, Australian
-                        arbiter
-                        of
-                        cool Kym Ellery teams up with Moda Operandi.</p>
-                    <p class="product_price">$52.00</p>
+    <section class="main-cart center">
+        <div class="main-cart__left">
+            <div class="main-cart__product">
+                <img src="img/img-cart/cart1.png" alt="product" class="main-cart__product_img">
+                <div class="main-cart__product_info">
+                    <h2 class="main-cart__product_title">MANGO PEOPLE T&nbsp-&nbspSHIRT</h2>
+                    <p class="main-cart__product_text main-cart__product_text_price">Price:</p>
+                    <p class="main-cart__product_text main-cart__product_text_color">Color:</p>
+                    <p class="main-cart__product_text main-cart__product_text_size">Size:</p>
+                    <p class="main-cart__product_text main-cart__product_text_quantity">Quantity:</p>
                 </div>
-                <a href="#" class="overlay">
-                    <img src="img/add_product.png" alt="add product">
-                </a>
             </div>
-            <div class="product">
-                <a href="product.html" class="product_link"><img src="img/product2.svg" alt="product"
-                        class="product_img"></a>
-                <div class="product_info">
-                    <a href="product.html" class="product_name">ELLERY X M'O CAPSULE</a>
-                    <p class="product_text">Known for her sculptural takes on traditional tailoring, Australian
-                        arbiter
-                        of
-                        cool Kym Ellery teams up with Moda Operandi.</p>
-                    <p class="product_price">$52.00</p>
+            <div class="main-cart__product">
+                <img src="img/img-cart/cart2.png" alt="product" class="main-cart__product_img">
+                <div class="main-cart__product_info">
+                    <h2 class="main-cart__product_title">MANGO PEOPLE T&nbsp-&nbspSHIRT</h2>
+                    <p class="main-cart__product_text main-cart__product_text_price">Price:</p>
+                    <p class="main-cart__product_text main-cart__product_text_color">Color:</p>
+                    <p class="main-cart__product_text main-cart__product_text_size">Size:</p>
+                    <p class="main-cart__product_text main-cart__product_text_quantity">Quantity:</p>
                 </div>
-                <a href="#" class="overlay">
-                    <img src="img/add_product.png" alt="add product">
-                </a>
             </div>
-            <div class="product">
-                <a href="product.html" class="product_link"><img src="img/product3.svg" alt="product"
-                        class="product_img"></a>
-                <div class="product_info">
-                    <a href="product.html" class="product_name">ELLERY X M'O CAPSULE</a>
-                    <p class="product_text">Known for her sculptural takes on traditional tailoring, Australian
-                        arbiter
-                        of
-                        cool Kym Ellery teams up with Moda Operandi.</p>
-                    <p class="product_price">$52.00</p>
-                </div>
-                <a href="#" class="overlay">
-                    <img src="img/add_product.png" alt="add product">
-                </a>
-            </div>
-            <div class="product">
-                <a href="product.html" class="product_link"><img src="img/product4.svg" alt="product"
-                        class="product_img"></a>
-                <div class="product_info">
-                    <a href="product.html" class="product_name">ELLERY X M'O CAPSULE</a>
-                    <p class="product_text">Known for her sculptural takes on traditional tailoring, Australian
-                        arbiter
-                        of
-                        cool Kym Ellery teams up with Moda Operandi.</p>
-                    <p class="product_price">$52.00</p>
-                </div>
-                <a href="#" class="overlay">
-                    <img src="img/add_product.png" alt="add product">
-                </a>
-            </div>
-            <div class="product">
-                <a href="product.html" class="product_link"><img src="img/product5.svg" alt="product"
-                        class="product_img"></a>
-                <div class="product_info">
-                    <a href="product.html" class="product_name">ELLERY X M'O CAPSULE</a>
-                    <p class="product_text">Known for her sculptural takes on traditional tailoring, Australian
-                        arbiter
-                        of
-                        cool Kym Ellery teams up with Moda Operandi.</p>
-                    <p class="product_price">$52.00</p>
-                </div>
-                <a href="#" class="overlay">
-                    <img src="img/add_product.png" alt="add product">
-                </a>
-            </div>
-            <div class="product">
-                <a href="product.html" class="product_link"><img src="img/product6.svg" alt="product"
-                        class="product_img"></a>
-                <div class="product_info">
-                    <a href="product.html" class="product_name">ELLERY X M'O CAPSULE</a>
-                    <p class="product_text">Known for her sculptural takes on traditional tailoring, Australian
-                        arbiter
-                        of
-                        cool Kym Ellery teams up with Moda Operandi.</p>
-                    <p class="product_price">$52.00</p>
-                </div>
-                <a href="#" class="overlay">
-                    <img src="img/add_product.png" alt="add product">
-                </a>
+            <div class="main-cart__buttons">
+                <a class="main-cart__buttons_link" href="#">CLEAR SHOPPING CART</a>
+                <a class="main-cart__buttons_link" href="catalog.html">CONTINUE SHOPPING</a>
             </div>
         </div>
 
-        <div class="btn_link">
-            <a href="product.html" class="btn">Browse All Product</a>
+        <div class="main-cart__right">
+            <form class="main-cart__form" action="#">
+                <h3 class="main-cart__form_title">SHIPPING ADRESS</h3>
+                <input class="main-cart__form_input" type="text" name="Country" placeholder="Country">
+                <input class="main-cart__form__input" type="text" name="State" placeholder="State">
+                <input class="main-cart__form_input" type="text" name="Postcode / Zip" placeholder="Postcode / Zip">
+                <input class="main-cart__form_submit" type="submit" value="GET A QUOTE">
+            </form>
+            <div class="main-cart__final-box">
+                <div class="main-cart__final">
+                    <h4 class="main-cart__final_subtitle">SUB TOTAL</h4>
+                    <h3 class="main-cart__final_title">GRAND TOTAL</h3>
+                </div>
+                <div class="main-cart__box-button">
+                    <button class="main-cart__button">PROCEED TO CHECKOUT</button>
+                </div>
+            </div>
         </div>
-    </section>
-
-    <section class="opportunity center">
-        <article class="opportunity_box">
-            <img src="img/opportunity1.svg" alt="opportunity">
-            <h3 class="opportunity_title">Free Delivery</h3>
-            <p class="opportunity_text">Worldwide delivery on all. Authorit tively morph next-generation innov tion with
-                extensive models.</p>
-        </article>
-        <article class="opportunity_box">
-            <img src="img/opportunity2.svg" alt="opportunity">
-            <h3 class="opportunity_title">Sales & discounts</h3>
-            <p class="opportunity_text">Worldwide delivery on all. Authorit tively morph next-generation innov tion with
-                extensive models.</p>
-        </article>
-        <article class="opportunity_box">
-            <img src="img/opportunity3.svg" alt="opportunity">
-            <h3 class="opportunity_title">Quality assurance</h3>
-            <p class="opportunity_text">Worldwide delivery on all. Authorit tively morph next-generation innov tion with
-                extensive models.</p>
-        </article>
     </section>
 
     <section class="application center">
@@ -251,8 +133,10 @@
             </figcaption>
         </figure>
         <div class="application_right">
-            <h3 class="app_title">SUBSCRIBE</h3>
-            <p class="app_text">FOR OUR NEWLETTER AND PROMOTION</p>
+            <div>
+                <h3 class="app_title">SUBSCRIBE</h3>
+                <p class="app_text">FOR OUR NEWLETTER AND PROMOTION</p>
+            </div>
             <form class="application_form" action="#">
                 <input class="application_form_input" type="email" placeholder="Enter Your Email">
                 <button class="application_form_submit" type="submit">Subscribe</button>
@@ -335,7 +219,6 @@
             </div>
         </nav>
     </footer>
-
 </body>
 
 </html>
