--- a/catalog.html
+++ b/catalog.html
@@ -69,7 +69,7 @@
                 </div>
             </details>
             <a href="#" class="header_menu no_icon"><img src="img/header_nav_2.svg" alt="user"></a>
-            <a href="#" class="header_menu no_icon"><img src="img/header_nav_3.svg" alt="basket"></a>
+            <a href="cart.html" class="header_menu no_icon"><img src="img/header_nav_3.svg" alt="basket"></a>
         </div>
     </header>
 
