--- a/product.html
+++ b/product.html
@@ -4,7 +4,8 @@
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;900&family=Roboto&display=swap"
+        rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product</title>
@@ -68,7 +69,7 @@
                 </div>
             </details>
             <a href="#" class="header_menu no_icon"><img src="img/header_nav_2.svg" alt="user"></a>
-            <a href="#" class="header_menu no_icon"><img src="img/header_nav_3.svg" alt="basket"></a>
+            <a href="cart.html" class="header_menu no_icon"><img src="img/header_nav_3.svg" alt="basket"></a>
         </div>
     </header>
 
