--- a/cart.html
+++ b/cart.html
@@ -109,7 +109,7 @@
             <form class="main-cart__form" action="#">
                 <h3 class="main-cart__form_title">SHIPPING ADRESS</h3>
                 <input class="main-cart__form_input" type="text" name="Country" placeholder="Country">
-                <input class="main-cart__form__input" type="text" name="State" placeholder="State">
+                <input class="main-cart__form_input" type="text" name="State" placeholder="State">
                 <input class="main-cart__form_input" type="text" name="Postcode / Zip" placeholder="Postcode / Zip">
                 <input class="main-cart__form_submit" type="submit" value="GET A QUOTE">
             </form>
