--- a/catalog.html
+++ b/catalog.html
@@ -340,6 +340,27 @@
         </div>
     </div>
 
+    <section class="opportunity center">
+        <article class="opportunity_box">
+            <img src="img/opportunity1.svg" alt="opportunity">
+            <h3 class="opportunity_title">Free Delivery</h3>
+            <p class="opportunity_text">Worldwide delivery on all. Authorit tively morph next-generation innov tion with
+                extensive models.</p>
+        </article>
+        <article class="opportunity_box">
+            <img src="img/opportunity2.svg" alt="opportunity">
+            <h3 class="opportunity_title">Sales & discounts</h3>
+            <p class="opportunity_text">Worldwide delivery on all. Authorit tively morph next-generation innov tion with
+                extensive models.</p>
+        </article>
+        <article class="opportunity_box">
+            <img src="img/opportunity3.svg" alt="opportunity">
+            <h3 class="opportunity_title">Quality assurance</h3>
+            <p class="opportunity_text">Worldwide delivery on all. Authorit tively morph next-generation innov tion with
+                extensive models.</p>
+        </article>
+    </section>
+
     <section class="application center">
         <figure class="application_left">
             <img class="application_foto" src="img/application_img.svg" alt="foto">
