--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </header>
 
     <main class="main">
-        <div class="main_left">
+        <div class="main_left del">
             <img src="img/main_img.svg" alt="maim img">
         </div>
         <div class="main__right">
